--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-flask==2.0.2
-werkzeug==2.0.2
-selenium==4.1.0
-requests==2.27.1
-gunicorn==20.1.0
-validators==0.20.0
-beautifulsoup4==4.10.0
-urllib3==1.26.7
-psutil==5.9.5
+flask
+requests
+selenium
+validators
+beautifulsoup4
+psutil
+proxychains
